[metadata]
name = tmux-buffer
version = 0.0.1
author = Adil Hadi
author_email = zulkhairil.a@pg.com
description = Clean Extract Visualise
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adilhadizul/tmux-buffer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True